<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:background="@drawable/splash_gradient"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_profile"
        android:textColor="@color/light"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/panel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/panel" />

    <View
        android:id="@+id/margin_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="@id/panel" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_marginLeft="@dimen/panel_16dp"
        android:layout_marginRight="@dimen/panel_16dp"
        android:elevation="1dp"
        app:cardCornerRadius="@dimen/radius_panel"
        app:layout_constraintTop_toBottomOf="@id/margin_panel">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btn_edit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_settings"
                app:tint="@color/grey"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_profile"
                app:tint="@color/lightBlack"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="21sp"
                android:textStyle="bold"
                android:text="@string/loading_name"
                app:layout_constraintTop_toBottomOf="@id/iv_profile"
                tools:text="Fulan Fulanah" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/loading_email"
                app:layout_constraintTop_toBottomOf="@id/tv_nama"
                tools:text="fulanfulanah@gmail.com" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tv_email">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/skor"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/tv_no_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selesaikan_tes"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:layout_marginTop="16dp"/>

                <GridLayout
                    android:id="@+id/container_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:columnCount="3"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="8dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:orientation="vertical"
                        android:paddingVertical="4dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/realistic"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_kategori_r"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="100"
                            android:textAlignment="center"
                            android:textColor="@color/accent"
                            android:textSize="21sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:orientation="vertical"
                        android:paddingVertical="4dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/investigative"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_kategori_i"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="100"
                            android:textAlignment="center"
                            android:textColor="@color/accent"
                            android:textSize="21sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:orientation="vertical"
                        android:paddingVertical="4dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/artistic"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_kategori_a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="100"
                            android:textAlignment="center"
                            android:textColor="@color/accent"
                            android:textSize="21sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:orientation="vertical"
                        android:paddingVertical="4dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/social"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_kategori_s"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="100"
                            android:textAlignment="center"
                            android:textColor="@color/accent"
                            android:textSize="21sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:orientation="vertical"
                        android:paddingVertical="4dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enterprising"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_kategori_e"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="100"
                            android:textAlignment="center"
                            android:textColor="@color/accent"
                            android:textSize="21sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:orientation="vertical"
                        android:paddingVertical="4dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/conventional"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_kategori_c"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="100"
                            android:textAlignment="center"
                            android:textColor="@color/accent"
                            android:textSize="21sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </GridLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>