<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient">

    <!--<View
        android:id="@+id/rectangle_1"
        android:layout_width="280dp"
        android:layout_height="396dp"
        android:background="@drawable/rectangle_rounded"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>-->

    <androidx.cardview.widget.CardView
        android:layout_width="280dp"
        android:layout_height="400dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/panel_16dp"
            android:paddingTop="30dp"
            android:paddingRight="@dimen/panel_16dp"
            android:paddingBottom="30dp">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:tint="@color/primary"
                android:src="@drawable/ic_info" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="21sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/perhatian"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:text="@string/warning_msg"
                android:textSize="12sp"
                android:layout_marginTop="24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/accent"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                android:text="@string/estimasi"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_mengerti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:backgroundTint="@color/accent"
                android:layout_gravity="end|bottom"
                android:layout_marginTop="24dp"
                app:cornerRadius="16dp"
                android:text="@string/mengerti"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>